--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,29 +31,69 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const filtered = inventors.filter(inventor => {
+      return (inventor.year < 1600 && inventor.year >= 1564)
+    })
+    // console.log(filtered)
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const mapped = inventors.map(inventor => {
+      return `${inventor.first} ${inventor.last}`
+    })
+    // console.log(mapped)
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const sorted = inventors.sort((a, b) => {
+      return a.year - b.year
+    })
+    // console.log(sorted)
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const reduced = inventors.reduce((total, inventor) => {
+      return total += (inventor.passed - inventor.year)
+    }, 0)
+    // console.log(reduced)
 
     // 5. Sort the inventors by years lived
+    const sortedd = inventors.sort((a, b) => {
+      return (b.passed - b.year) - (a.passed - a.year)
+    })
+    // console.log(sortedd)
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    // const de = people.filter(p => p.includes('de'))
+    // console.log(de)
+    const container = document.querySelector('.mw-category')
+    const links = document.querySelectorAll('a')
+    const newArr = Array.from(links)
+    const newLinks = newArr.filter(text => text.innerText.includes('de'))
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const lastNames = people.map(person => {
+      return person.split(" ")[1]
+    })
+    const nameSort = lastNames.sort((a, b) => {
+      return a[0] > b[0] ? 1 : -1
+    })
+    console.log(nameSort)
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
-
+    const reducedData = data.reduce((obj, item) => {
+      if (!obj[item]) {
+        obj[item] = 0
+      }
+      obj[item]++
+      
+      return obj
+    }, {}) 
+    console.log(reducedData)
   </script>
 </body>
 </html>
