--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -61,7 +61,7 @@
     const sortedd = inventors.sort((a, b) => {
       return (b.passed - b.year) - (a.passed - a.year)
     })
-    // console.log(sortedd)
+    // console.log(sortedd
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
